--- a/fighter.html
+++ b/fighter.html
@@ -46,12 +46,12 @@
 <body>
     <div class="body_bg">
         <!--::header part start::-->
-               <header class="main_menu single_page_menu">
+               <header class="main_menu single_page_menu"  style="padding-left: 15%; padding-right: 15%;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <nav class="navbar navbar-expand-lg navbar-light">
-                            <a class="navbar-brand" href="index.html"> <img src="pictures/munno word.png" alt="logo"> </a>
+                            <a class="navbar-brand" href="index.html" style="width: 20%;"> <img src="pictures/munno word.png" alt="logo"> </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse"
                                 data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                                 aria-expanded="false" aria-label="Toggle navigation">
@@ -269,7 +269,7 @@
         <!-- use sasu part end-->
 
         <!--::footer_part start::-->
-                <footer class="footer_part">
+                <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
