--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="body_bg">
         <!--::header part start::-->
-        <header class="main_menu single_page_menu">
+        <header class="main_menu single_page_menu"  style="padding-left: 15%; padding-right: 15%;">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
@@ -178,7 +178,7 @@
             <div class="container">
                 <div class="row align-items-center justify-content-between">
                     <div class="col-md-5 col-lg-6 col-xl-6">
-                        <div class="learning_img">
+                        <div class="video-container">
                            <!-- <video width="600" height="573" width="560" height="315"  controls>-->
                             <iframe src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             
@@ -290,7 +290,7 @@
         <!-- pricing part end-->
 
         <!--::footer_part start::-->
-        <footer class="footer_part">
+        <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
             <div class="footer_top">
                 <div class="container">
                     <div class="row">
