--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -46,12 +46,12 @@
 <body>
   <div class="body_bg">
   <!--::header part start::-->
-  <header class="main_menu single_page_menu">
+  <header class="main_menu single_page_menu"  style="padding-left: 15%; padding-right: 15%;">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-12">
           <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="index.html"> <img src="pictures/munno word.png" alt="logo"> </a>
+            <a class="navbar-brand" href="index.html" style="width: 20%;"> <img src="pictures/munno word.png" alt="logo"> </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="menu_icon"><i class="fas fa-bars"></i></span>
@@ -110,7 +110,7 @@
   <!-- ================ contact section start ================= -->
   <section class="contact-section section_padding">
     <div class="container">
-      <div class="d-none d-sm-block mb-5 pb-4">
+      <div class="d-none d-sm-block mb-5 pb-4" style="padding-left: 15%; padding-right: 15%;">
         <p>MUNNUO and all its digital works are providing service to all its users with intent of entertainment. This SERVICE is provided by MUNNUO at no cost and is intended for use as is. 
         </p>
         <br>
@@ -199,88 +199,90 @@
   <!-- ================ contact section end ================= -->
 
   <!--::footer_part start::-->
-<footer class="footer_part">
-            <div class="footer_top">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
-                                <p>Where games comes to life! Keep creating!
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <h4>Contact</h4>
-                                <p>Email : contact@munnuo.com</p>
-                                <p>Phone : 312-722-0338</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <h4>Navigate</h4>
-                                <ul class="list-unstyled">
-                                    <li><a href="fighter.html">Games</a></li>
-                                    <li><a href="">Careers</a></li>
-                                    <li><a href="about.html">About</a></li>                                   
-                                    <li><a href="terms&conditions.html">Terms & Conditions</a></li>
-                                    <li><a href="privacypolicy.html">Privacy Policy</a></li>
-                                    <li><a href="refundpolicy.html">Refund Policy</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="single_footer_part">
-                                <h4>Newsletter</h4>
-                                <p>If you want to keep track of all games or future projects being developed
+  <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
+    <div class="footer_top">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6 col-lg-3">
+            <div class="single_footer_part">
+              <a href="index.html" class="footer_logo_iner"> <img src="pictures/munno word.png" alt="#"> </a>
+                <p>Where games comes to life! Keep creating!
+                </p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-3">
+            <div class="single_footer_part">
+              <h4>Contact</h4>
+              <p>Email : contact@munnuo.com</p>
+              <p>Phone : 312-722-0338</p>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-3">
+            <div class="single_footer_part">
+              <h4>Navigate</h4>
+                <ul class="list-unstyled">
+                  <li><a href="fighter.html">Games</a></li>
+                  <li><a href="">Careers</a></li>
+                  <li><a href="about.html">About</a></li>                                   
+                  <li><a href="terms&conditions.html">Terms & Conditions</a></li>
+                  <li><a href="privacypolicy.html">Privacy Policy</a></li>
+                  <li><a href="refundpolicy.html">Refund Policy</a></li>
+                </ul>
+            </div>
+          </div>
+          <div class="col-sm-6 col-lg-3">
+            <div class="single_footer_part">
+              <h4>Newsletter</h4>
+              <p>If you want to keep track of all games or future projects being developed
                                     by Munnuo Games Studio, subscribe to our newsletter by entering your email!
-                                </p>
-                                <div id="mc_embed_signup">
-                                    <form target="_blank"
-                                        action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
+              </p>
+              <div id="mc_embed_signup">
+                <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
                                         method="get" class="subscribe_form relative mail_part">
-                                        <input type="email" name="email" id="newsletter-form-email"
+                  <input type="email" name="email" id="newsletter-form-email"
                                             placeholder="Email Address" class="placeholder hide-on-focus"
                                             onfocus="this.placeholder = ''"
                                             onblur="this.placeholder = ' Email Address '">
-                                        <button type="submit" name="submit" id="newsletter-submit"
+                  <button type="submit" name="submit" id="newsletter-submit"
                                             class="email_icon newsletter-submit button-contactForm"><i
                                                 class="far fa-paper-plane"></i></button>
-                                        <div class="mt-10 info"></div>
-                                    </form>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                  <div class="mt-10 info">
+
+                  </div>
+                </form>
+              </div>
             </div>
-            <div class="copygight_text">
-                <div class="container">
-                    <div class="row align-items-center">
-                        <div class="col-lg-8">
-                            <div class="copyright_text">
-                                <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by Munnuo Games Studio
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></P>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="footer_icon social_icon">
-                                <ul class="list-unstyled">
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a>
-                                    </li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
-                                    <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copygight_text">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-lg-8">
+            <div class="copyright_text">
+              <P><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                        Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is powered by Munnuo Games Studio
+                        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              </P>
             </div>
-        </footer>
+          </div>
+          <div class="col-lg-4">
+            <div class="footer_icon social_icon">
+              <ul class="list-unstyled">
+                <li><a href="#" class="single_social_icon"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#" class="single_social_icon"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="#" class="single_social_icon"><i class="fas fa-globe"></i></a></li>
+                <li><a href="#" class="single_social_icon"><i class="fab fa-behance"></i></a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
   <!--::footer_part end::-->
+
   <!-- jquery plugins here-->
   <script src="js/jquery-1.12.1.min.js"></script>
   <!-- popper js -->
