--- a/contact.html
+++ b/contact.html
@@ -108,7 +108,7 @@
 
   <!-- ================ contact section start ================= -->
   <section class="contact-section section_padding">
-    <div class="container">
+    <div class="container" style="padding-left: 5%; padding-right: 5%;">
       <div class="row">
         <div class="col-12">
           <h2 class="contact-title">Get in Touch</h2>
@@ -181,7 +181,7 @@
 
   <!--::footer_part start::-->
 <footer class="footer_part">
-            <div class="footer_top">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
