--- a/index.html
+++ b/index.html
@@ -177,18 +177,20 @@
         <section class="about_us section_padding">
             <div class="container">
                 <div class="row align-items-center justify-content-between">
-                    <div class="col-md-5 col-lg-6 col-xl-6">
-                        <div class="video-container">
+                    <div>
+                        <div style="padding-left: 20%;">
                            <!-- <video width="600" height="573" width="560" height="315"  controls>-->
-                            <iframe src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/NEBiz00GGeY?si=q3UUnlYHm5E90TI-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                             
                             <!--</video>-->
                             <!--<img src="img/about_img.png" alt="">-->
                         </div>
                     </div>
+                    <br>
+                    <br>
                     <div class="col-md-7 col-lg-6 col-xl-5">
-                        <div class="about_us_text">
-                            <h2 style="text-align: center;">Learn more about the Universe of Moji</h2>
+                        <div class="about_us_text" style="align-items: center; padding-right: 20%;">
+                            <h2 style="text-align: center; padding-top: 5%; padding-bottom: 5%;">Learn more about the Universe of Moji</h2>
                             <p>There are three games that take place in the universe of Moji;
                                 Moji Karts (a mobile kart racing game), Moji World, and Da Streetz.
                             </p>
@@ -272,11 +274,11 @@
                 </div>
                 <div class="upcomming_war_iner">
                     <div class="row justify-content-center align-items-center h-100">
-                        <a class="navbar-brand" ><img src="pictures/shape_catcher_icon.png" alt="logo"></a>
+                        <a><img src="pictures/shape_catcher_icon.png" alt="logo"></a>
                         <div class="col-10 col-sm-5 col-lg-3">
                             <div class="upcomming_war_counter text-center">
-                                <h2>Try it on Google Play!</h2>
-                                <a class="navbar-brand" href="https://play.google.com/store/apps/details?id=com.MUNNUO.ShapeCatcher&hl=en_NZ&pli=1"> <img src="pictures/play store image.png" alt="logo"> </a>
+                                <h2 style="padding-top: 10%; padding-bottom: 10%;">Try it on Google Play!</h2>
+                                <a style="padding-top: 10%; padding-bottom: 10%;" href="https://play.google.com/store/apps/details?id=com.MUNNUO.ShapeCatcher&hl=en_NZ&pli=1"> <img src="pictures/play store image.png" alt="logo"> </a>
                             </div>
                         </div>
                     </div>
@@ -290,13 +292,13 @@
         <!-- pricing part end-->
 
         <!--::footer_part start::-->
-        <footer class="footer_part"  style="padding-left: 15%; padding-right: 15%;">
-            <div class="footer_top">
+        <footer class="footer_part">
+            <div class="footer_top" style="padding-left: 15%; padding-right: 15%;">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-6 col-lg-3">
                             <div class="single_footer_part">
-                                <a href="index.html" class="footer_logo_iner" style="align-items: center;"> <img src="pictures/munno word.png" alt="#"> </a>
+                                <a href="index.html" class="footer_logo_iner" style="align-items: center; padding-top: 10%; padding-bottom: 10%; "> <img src="pictures/munno word.png" alt="#"> </a>
                                 <p>Where games comes to life! Keep creating!
                                 </p>
                             </div>
@@ -346,7 +348,7 @@
                     </div>
                 </div>
             </div>
-            <div class="copygight_text">
+            <div class="copygight_text" style="padding-left: 5%; padding-right: 5%;">
                 <div class="container">
                     <div class="row align-items-center">
                         <div class="col-lg-8">
