--- a/team.html
+++ b/team.html
@@ -116,25 +116,22 @@
                     <div class="col-lg-12">
                         <div class="client_logo_slider owl-carousel d-flex justify-content-between">
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_1.png" alt="">
+                                <h3 style="color: black;">Chuck</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_2.png" alt="">
+                                <h3 style="color: black;">Delora</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_3.png" alt="">
+                                <h3 style="color: black;">Kiambi</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_4.png" alt="">
+                                <h3 style="color: black;">Monique</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_5.png" alt="">
+                                <h3 style="color: black;">Myiesha</h3>
                             </div>
                             <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_1.png" alt="">
-                            </div>
-                            <div class="single_client_logo">
-                                <img src="img/client_logo/client_logo_2.png" alt="">
+                                <h3 style="color: black;">Thugger</h3>
                             </div>
                         </div>
                     </div>
@@ -144,7 +141,7 @@
         <!--::client logo part end::-->
 
         <!-- use sasu part end-->
-        <section class="Latest_War padding_top">
+        <section class="Latest_War padding_top" style="padding-left: 15%; padding-right: 15%;">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
