--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 
 <head>
   <!-- Required meta tags -->
+   <meta name="description" content="MUNNUO Games Studio is correctly developing two game projects: 'Da Streetz' and 'Moji World'. Get in contact using the form">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Munnuo Games</title>
