--- a/team.html
+++ b/team.html
@@ -64,7 +64,7 @@
                                         <a class="nav-link" href="index.html">Home</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="fighter.html">Games</a>
+                                        <a class="nav-link" href="games.html">Games</a>
                                     </li>
                                     <li class="nav-item">
                                         <a class="nav-link" href="team.html">team</a>
@@ -179,7 +179,7 @@
                             <div class="single_footer_part">
                                 <h4>Navigate</h4>
                                 <ul class="list-unstyled">
-                                    <li><a href="fighter.html">Games</a></li>
+                                    <li><a href="games.html">Games</a></li>
                                     <li><a href="">Careers</a></li>
                                     <li><a href="about.html">About</a></li>
                                     <li><a href="terms&conditions.html">Terms & Conditions</a></li>
